{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 11,
  "lineage": "21e9f3d9-d99f-cd4d-37fc-93b3366dc9ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219661779711:internet-gateway/igw-0a4c1ebb9875e284e",
            "id": "igw-0a4c1ebb9875e284e",
            "owner_id": "219661779711",
            "tags": {
              "Name": "igw-migrate-May"
            },
            "tags_all": {
              "Name": "igw-migrate-May"
            },
            "vpc_id": "vpc-0fb063345df9aa980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219661779711:route-table/rtb-0c22113581df5ef6a",
            "id": "rtb-0c22113581df5ef6a",
            "owner_id": "219661779711",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4c1ebb9875e284e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-migrate-May"
            },
            "tags_all": {
              "Name": "rt-migrate-May"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb063345df9aa980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07945c2d68b8a051b",
            "route_table_id": "rtb-0c22113581df5ef6a",
            "subnet_id": "subnet-026cecae80d3031d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "source_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219661779711:security-group/sg-01bc4d70318896a9a",
            "description": "Allow HTTPS and RDP for Azure Migrate lab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bc4d70318896a9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for Azure Migrate appliance communication",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP for admin access",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ag-migrate-source-May",
            "name_prefix": "",
            "owner_id": "219661779711",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-migrate-source-May"
            },
            "tags_all": {
              "Name": "sg-migrate-source-May"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb063345df9aa980"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219661779711:subnet/subnet-026cecae80d3031d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026cecae80d3031d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "219661779711",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-migrate-May"
            },
            "tags_all": {
              "Name": "snet-migrate-May"
            },
            "vpc_id": "vpc-0fb063345df9aa980"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:219661779711:vpc/vpc-0fb063345df9aa980",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-059da2e7b0a899e52",
            "default_route_table_id": "rtb-05682dd5b487a6e3d",
            "default_security_group_id": "sg-03aad3312f39fc7dd",
            "dhcp_options_id": "dopt-0f5e8e62881008363",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb063345df9aa980",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05682dd5b487a6e3d",
            "owner_id": "219661779711",
            "tags": {
              "Name": "vpc-migrate-May",
              "project": "azure-migrate-lab"
            },
            "tags_all": {
              "Name": "vpc-migrate-May",
              "project": "azure-migrate-lab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}